# cuddlePanel

./: .env.example  .gitignore  AGENTS.md  BUILD.md  CMakeLists.txt  Makefile  README.md
docs/: auth-and-admin.md  codex-management.md  deploy-management.md  fail2ban-management.md  first-run-setup.md  http-layer.md  nginx-management.md  services-management.md  system-management.md  terminal-management.md
include/: auth.h  codex_chat.h  codex_runner.h  deploy_runner.h  fail2ban_store.h  http.h  log.h  nginx_store.h  service_store.h  setup.h  system_admin.h  template.h  terminal_manager.h  totp.h  user_store.h
scripts/: install-deps.sh
src/: auth.cpp  codex_chat.cpp  codex_runner.cpp  deploy_runner.cpp  fail2ban_store.cpp  http.cpp  http_handlers_auth.cpp  http_handlers_codex.cpp  http_handlers_deploy.cpp  http_handlers_fail2ban.cpp  http_handlers_nginx.cpp  http_handlers_page.cpp  http_handlers_services.cpp  http_handlers_system.cpp  http_handlers_terminal.cpp  http_handlers_users.cpp  log.cpp  main.cpp  nginx_store.cpp  service_store.cpp  setup.cpp  system_admin.cpp  template.cpp  terminal_manager.cpp  totp.cpp  user_store.cpp
static/: app.css  app.js
static/js/: auth.js  dashboard.js
static/js/core/: api.js  dom.js  toast.js
static/js/pages/: codex.js  dashboard_home.js  deploy.js  fail2ban.js  nginx.js  services.js  system.js  system_user.js  terminal.js  users.js
templates/: dashboard.html  login.html  onboarding.html  totp_setup.html
templates/pages/: codex.html  dashboard.html  deploy.html  fail2ban.html  nginx.html  service_detail.html  services.html  system.html  system_user.html  terminal.html  terminal_gate.html  users.html
templates/partials/: footer.html  header.html  sidebar.html
tests/: auth_tests.cpp  codex_chat_tests.cpp  codex_tests.cpp  deploy_tests.cpp  fail2ban_tests.cpp  nginx_tests.cpp  service_tests.cpp  setup_tests.cpp  system_admin_tests.cpp  terminal_tests.cpp
